Changed font-family for better readability and fixed tab order

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -16,11 +16,12 @@
 }
 
 #name {
-  margin-top: -75px;
+  /* margin-top: -75px; */
   margin-right: 5px;
   margin-left: 5px;
-  font-size: 100px;
+  font-size: 75px;
   background-clip: border-box;
+  font-family: 'Amatic SC';
 }
 
 .first-tab {
@@ -38,10 +39,10 @@
 }
 
 .experiences-title {
-  font-size: 75px;
+  font-size: 50px;
   color: black;
   overflow: hidden;
-  margin-top: 75px;
+  margin-top: 25px;
   text-align: center;
   position: relative;
   background: inherit;
@@ -74,7 +75,7 @@
   background: inherit;
   position: relative;
   margin-top: 50px;
-  width: 500px;
+  width: auto;
   /* margin-left: 36.5%; */
   height: 150px;
   padding: 10px;
@@ -84,6 +85,25 @@
   background-position: top left, top right, bottom left, bottom right;
   border: solid white;
   border-width: 0 3px;
+}
+
+.white-text {
+  color: white;
+}
+
+.box#jechat {
+  width: 800px;
+  margin-left: 25%;
+}
+
+.box#sahure {
+  width: 850px;
+  margin-left: 25%;
+}
+
+.box#roche {
+  width: 850px;
+  margin-left: 25%;
 }
 
 table,
@@ -97,12 +117,12 @@ td {
 
 p {
   margin-top: 25px;
-  font-size: 25px;
+  font-size: 50px;
   margin-bottom: 30px;
 }
 
 h2 {
-  font-size: 50px;
+  font-size: 35px;
 }
 
 #emphasis {
@@ -121,7 +141,7 @@ hr {
 #carouselExampleControls {
   width: 75%;
   height: 750px;
-  border: 2px dashed black;
+  border: 2px dashed white;
   margin-left: 12.5%;
   margin-top: 50px;
   padding: 10px;
@@ -138,11 +158,15 @@ hr {
 }
 
 .fa-angle-left {
-  color: black;
+  color: white;
 }
 
 .fa-angle-right {
-  color: black;
+  color: white;
+}
+
+.carousel-table {
+  font-size: 35px;
 }
 
 .second-tab {
@@ -171,6 +195,7 @@ img#crome-logo {
 ul li {
   display: inline-block;
   padding: 8px;
+  margin-left: 5%;
 }
 
 table#ruma-table {
@@ -202,8 +227,25 @@ table#computersociety-table {
     padding: 10px;
 }
 
-#computer-society {
+.box#computer-society {
     margin-left: 20%;
+    width: 100%; 
+    text-align: center;
+}
+.box#ruma {
+  width: 100%;
+  text-align: center;
+}
+
+.third-tab {
+  background-color: white;
+  height: auto;
+  font-size: 35px;
+}
+
+img#python-logo {
+  height: 50px;
+  width: 50px;
 }
 
 
